Default registration role to USER; remove roles from RegisterRequest; update Postman